# p2pChatApp

./: README.md
cofe/: package-lock.json  package.json  pnpm-lock.yaml
cofe/src/: App.css  App.tsx  SplashScreen.tsx
cofe/src-tauri/: Cargo.toml  tauri.conf.json
cofe/src-tauri/src/: config.rs  lib.rs  main.rs
cofe/src-tauri/src/message/: message.rs  mod.rs
cofe/src-tauri/src/message/chat/: chat_store.rs  mod.rs
cofe/src-tauri/src/node_identity/: identity.rs  mod.rs  peers.rs
cofe/src-tauri/src/p2p/: agent.rs  behaviour.rs  command.rs  connection_p2p.rs  event.rs  mod.rs
cofe/src-tauri/src/security/: security.rs
cofe/src/MainLayout/: ChatArea.tsx  Sidebar.tsx  TopBar.tsx  index.tsx
cofe/src/types/: peer.ts
vanadinite/: Cargo.toml  progress.md  readme.md  rule.md
vanadinite/src/: main.rs
vanadinite/src/credentials/: ed25519.rs
vanadinite/src/message/: message.rs
vanadinite/src/p2p/: agent.rs  mod.rs  p2p.rs
vanadinite/src/utils/: mod.rs
