[package]
name = "cofe"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cofe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1.44.1", features = ["full"] }
libp2p-allow-block-list = "0.5.0"
libp2p = { version = "0.55.0", features = [
    "kad",
    "gossipsub",
    "tcp",
    "noise",
    "yamux",
    "websocket",
    "tokio",
    "identify",
    "request-response",
    "cbor",
    "tls",
    "dns",
    "macros",
    "serde",
] }

x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = "1"
log = "0.4"
tracing = "0.1.41"
rand = "0.9.0"
chrono = "0.4.41"
sha2 = "0.10.9"
schnorrkel = { version = "0.11.4", features = ["serde"] }
tauri-plugin-log = "2"
keyring = "3.6.3"
hex = "0.4.3"
aes-gcm = "0.10"
argon2 = "0.4.1"
base64 = "0.22.1"
dirs = "6.0.0"
once_cell = "1.21.3"
